--- a/dark/my-layout.scss
+++ b/dark/my-layout.scss
@@ -15,7 +15,7 @@ body {
 // Theme Builder drawer content
 
 .theme-builder-drawer {
-  @include mdc-drawer-surface-fill-color(white);
+  @include mdc-drawer-surface-fill-color($mdc-theme-background);
   @include mdc-drawer-shape-radius(0);
   width: 400px;
   height: auto;
@@ -35,11 +35,11 @@ body {
 
   .mdc-drawer__content {
     padding: 24px;
-    color: rgba(0, 0, 0, 0.87);
+    color: var(--defaultText);
   }
 
   h6 {
-    color: rgba(0, 0, 0, 0.6);
+    color: var(--secondaryText);
     margin: 0;
   }
   p {
@@ -48,22 +48,22 @@ body {
   }
 
   .mdc-tab {
-    font-family: Roboto, sans-serif;
-    @include mdc-tab-active-text-label-color(#6200ee);
-    @include mdc-tab-states-color(#6200ee);
-    @include mdc-tab-text-label-color(black);
+    font-family: Roboto;
+    @include mdc-tab-active-text-label-color($mdc-theme-on-secondary);
+    @include mdc-tab-states-color($mdc-theme-background);
+    @include mdc-tab-text-label-color($mdc-theme-primary);
 
     .mdc-tab-indicator--active {
-      @include mdc-tab-ink-color(#6200ee);
+      @include mdc-tab-ink-color($mdc-theme-primary);
     }
 
     .mdc-tab-indicator {
-      @include mdc-tab-indicator-underline-color(#6200ee);
+      @include mdc-tab-indicator-underline-color($mdc-theme-primary);
     }
   }
 
   a {
-    color: #6200ee;
+    color: rgba(255, 255, 255, 0.54);
     text-decoration: none;
     font-family: Roboto, sans-serif;
 
@@ -76,40 +76,40 @@ body {
 
   code {
     font-family: "Roboto mono";
-    background: $material-color-grey-200;
+    // background: $material-color-grey-200;
   }
 
   .mdc-form-field {
     margin: 12px 0;
 
     .rtl-switch {
-      @include mdc-switch-toggled-off-color(white);
-      @include mdc-switch-toggled-off-track-color(black);
+      @include mdc-switch-toggled-off-color(#ffffff);
+      @include mdc-switch-toggled-off-track-color(#ffffff);
       margin-right: 16px;
     }
   }
 
   .section-header a {
-    color: rgba(0, 0, 0, 0.54);
+    color: var(--secondaryText);
 
     &:hover,
     &:focus {
-      color: rgba(0, 0, 0, 0.87);
+      color: var(--defaultText);
     }
   }
 }
 
-.theme-builder-title {
-  color: $material-color-grey-800;
-  font-family: "Roboto", sans-serif;
-  font-style: italic;
-  font-weight: 800;
+// .theme-builder-title {
+//   color: $material-color-grey-800;
+//   font-family: "Roboto", sans-serif;
+//   font-style: italic;
+//   font-weight: 800;
 
-  svg {
-    vertical-align: -3px;
-    margin-right: 4px;
-  }
-}
+//   svg {
+//     vertical-align: -3px;
+//     margin-right: 4px;
+//   }
+// }
 
 .drawer-content--theme-summary {
   display: none;
@@ -128,11 +128,11 @@ body {
   }
 }
 
-.glitch-url {
-  color: #6200ee;
-  font-size: 0.65rem;
-  font-family: Roboto, sans-serif;
-}
+// .glitch-url {
+//   color: $mdc-theme-primary;
+//   font-size: 0.65rem;
+//   font-family: Roboto, sans-serif;
+// }
 
 // Theme Summary content
 
@@ -184,31 +184,37 @@ body {
 
     // Draw typography baselines
     &.mdc-typography--headline1 {
-      $line-height: 6rem;
+      $line-height: 2.375rem;
       @include mdc-typography-baseline-top($line-height);
       @include mdc-typography-baseline-bottom($line-height);
+      font-size: 2.375rem;
+      font-weight: 300;
     }
     &.mdc-typography--headline2 {
-      $line-height: 3.75rem;
-      @include mdc-typography-baseline-top($line-height);
-      @include mdc-typography-baseline-bottom($line-height);
-    }
-    &.mdc-typography--headline3 {
-      $line-height: 3.125rem;
-      @include mdc-typography-baseline-top($line-height);
-      @include mdc-typography-baseline-bottom($line-height);
-    }
-    &.mdc-typography--headline4 {
-      $line-height: 2.5rem;
-      @include mdc-typography-baseline-top($line-height);
-      @include mdc-typography-baseline-bottom($line-height);
-    }
-    &.mdc-typography--headline5 {
       $line-height: 2rem;
       @include mdc-typography-baseline-top($line-height);
       @include mdc-typography-baseline-bottom($line-height);
+      font-size: 1.75rem;
+      font-weight: 300;
     }
-    &.mdc-typography--headline6,
+    &.mdc-typography--headline3 {
+      $line-height: 2rem;
+      @include mdc-typography-baseline-top($line-height);
+      @include mdc-typography-baseline-bottom($line-height);
+      font-size: 1.375rem;
+      font-weight: 300;
+    }
+    // &.mdc-typography--headline4 {
+    //   $line-height: 2.5rem;
+    //   @include mdc-typography-baseline-top($line-height);
+    //   @include mdc-typography-baseline-bottom($line-height);
+    // }
+    // &.mdc-typography--headline5 {
+    //   $line-height: 2rem;
+    //   @include mdc-typography-baseline-top($line-height);
+    //   @include mdc-typography-baseline-bottom($line-height);
+    // }
+    // &.mdc-typography--headline6,
     &.mdc-typography--subtitle1,
     &.mdc-typography--subtitle2,
     &.mdc-typography--body1,
@@ -445,9 +451,9 @@ body {
     margin-bottom: 8px;
   }
 
-  .glitch-url {
-    font-size: 1rem;
-  }
+  // .glitch-url {
+  //   font-size: 1rem;
+  // }
 
   .drawer-content--instructions {
     .mdc-typography--overline {
@@ -564,8 +570,8 @@ body {
 .typography-callout {
   font-size: 12px;
   padding: 16px;
-  border: 1px solid $material-color-grey-300;
-  background-color: $material-color-grey-200;
+  border: 1px solid $mdc-theme-primary;
+  background-color: #101923;
 }
 
 .font-link {
