--- a/dark/my-theme.scss
+++ b/dark/my-theme.scss
@@ -1,5 +1,5 @@
-/* Build a Material theme */
-// To begin customizing your theme, modify these variables. By default each theme starts off with our baseline values, so you can easily swap them out.
+// Import Astro CSS
+// NOTE: Will remove after ruxcore is published
 @import "static/css/astro.min";
 
 /*  Typography */
@@ -15,24 +15,3 @@ $mdc-typography-font-family: unquote("Roboto, sans-serif");
 $mdc-shape-small-component-radius: 3px;
 $mdc-shape-medium-component-radius: 3px;
 $mdc-shape-large-component-radius: 3px;
-
-/* Color */
-// To change your theme's color scheme, replace the existing HEX color values with custom HEX color values. Use our color palette generator to help come up with pairings and check your color contrast. https://material.io/design/color/the-color-system.html#tools-for-picking-colors
-
-// Primary colors ($mdc-theme-primary) map to components such as app bars and buttons, while secondary colors ($mdc-theme-secondary) are used as accents on components such as FABs and selection controls.
-
-$mdc-theme-primary: var(--colorPrimary);
-$mdc-theme-secondary: var(--colorSecondary);
-
-// Theme background ($mdc-theme-background) appears behind scrollable content. Surface color ($mdc-theme-surface) is mapped to the surface of components such as cards, sheets, and menus. Error color ($mdc-theme-error) is used to indicate an error state for components such as text fields provided with inaccurate input.
-
-$mdc-theme-surface: var(--statusDarkCritical);
-$mdc-theme-background: var(--backgroundColor);
-$mdc-theme-error: #b00020;
-
-// “On-” colors define how text, icons, and strokes are colored in relation to the surface on which they appear. If you are updating these manually, be sure to consider accessible color contrast for the value pairs.
-
-$mdc-theme-on-primary: #ffffff;
-$mdc-theme-on-secondary: #ffffff;
-$mdc-theme-on-error: #ffffff;
-$mdc-theme-on-surface: #000000;
