--- a/dark/my-layout.scss
+++ b/dark/my-layout.scss
@@ -361,11 +361,13 @@ body {
       display: flex;
       flex-direction: column;
       align-items: center;
-
-      // label {
-      //   margin-top: 0.5rem;
-      // }
     }
+  }
+
+  .select-group {
+    margin: 0 1rem 1rem 0;
+    display: flex;
+    justify-content: space-between;
   }
 }
 
