--- a/dark/my-colors.scss
+++ b/dark/my-colors.scss
@@ -1,5 +1,8 @@
 /* Build a Material theme */
 // To begin customizing your theme, modify these variables. By default each theme starts off with our baseline values, so you can easily swap them out.
+@use "sass:map";
+@use "static/css/astro.min";
+
 @use "@material/theme" with (
   $primary: #4dacff,
   $secondary: #3a87cf,
@@ -11,6 +14,28 @@
   $surface: #ffffff,
   $on-surface: #000000,
 );
+
+$headline-typography: (
+  font-weight: 300,
+  margin: 0 0 0.5rem,
+);
+
+@use "@material/typography" with (
+  $font-family: unquote("Roboto, sans-serif"),
+  $styles-headline1: map.merge($headline-typography, (font-size: 2.375rem)),
+  $styles-headline2: map.merge($headline-typography, (font-size: 1.75rem)),
+  $styles-headline3: map.merge($headline-typography, (font-size: 1.375rem)),
+  $styles-body1: (margin: 0 0 1rem),
+  $styles-button: (
+    text-transform: none,
+    font-size: 1rem,
+    white-space: nowrap,
+    text-overflow: ellipsis,
+  ),
+);
+
+@import url("https://fonts.googleapis.com/css?family=Roboto:300,400,500");
+@import url("https://fonts.googleapis.com/icon?family=Material+Icons");
 
 /* Color */
 // To change your theme's color scheme, replace the existing HEX color values with custom HEX color values. Use our color palette generator to help come up with pairings and check your color contrast. https://material.io/design/color/the-color-system.html#tools-for-picking-colors
