--- a/dark/my-theme.scss
+++ b/dark/my-theme.scss
@@ -1,12 +1,8 @@
-// Import Astro CSS
-// NOTE: Will remove after ruxcore is published
-// @import "static/css/astro.min";
-
 /*  Typography */
 // To change your theme's typography, we recommend importing a font from Google Fonts and setting the global font-family https://fonts.google.com
 
-// @import url("https://fonts.googleapis.com/css?family=Roboto:300,400,500");
-// @import url("https://fonts.googleapis.com/icon?family=Material+Icons");
+@import url("https://fonts.googleapis.com/css?family=Roboto:300,400,500");
+@import url("https://fonts.googleapis.com/icon?family=Material+Icons");
 // $mdc-typography-font-family: unquote("Roboto, sans-serif");
 
 /* Shape */
