--- a/dark/my-components.scss
+++ b/dark/my-components.scss
@@ -259,6 +259,65 @@
   }
 }
 
+// Slider
+
+// Enabled
+.mdc-slider:not(.mdc-slider--disabled) {
+  .mdc-slider__track {
+    .mdc-slider__track--inactive {
+      background-color: var(--secondaryText);
+      opacity: 1;
+    }
+    .mdc-slider__tick-marks {
+      .mdc-slider__tick-mark--active {
+        background-color: white;
+      }
+      .mdc-slider__tick-mark--inactive {
+        background-color: var(--surfaceElements);
+      }
+    }
+  }
+  .mdc-slider__thumb {
+    .mdc-slider__thumb-knob {
+      border: 1px solid var(--defaultText);
+    }
+    .mdc-slider__value-indicator-container {
+      .mdc-slider__value-indicator {
+        background-color: $mdc-theme-primary;
+      }
+    }
+  }
+}
+
+// Disabled
+.mdc-slider.mdc-slider--disabled {
+  .mdc-slider__track {
+    .mdc-slider__track--active {
+      .mdc-slider__track--active_fill {
+        background-color: $mdc-theme-primary;
+        border-color: $mdc-theme-primary;
+      }
+    }
+    .mdc-slider__track--inactive {
+      background-color: var(--defaultText);
+    }
+    .mdc-slider__tick-marks {
+      .mdc-slider__tick-mark--active {
+        background-color: white;
+      }
+      .mdc-slider__tick-mark--inactive {
+        background-color: var(--surfaceElements);
+      }
+    }
+  }
+  .mdc-slider__thumb {
+    .mdc-slider__thumb-knob {
+      border: 1px solid var(--defaultText);
+      background-color: $mdc-theme-primary;
+    }
+  }
+}
+
 // List
 
 .component-wrapper > .mdc-list {
