--- a/dark/my-components.scss
+++ b/dark/my-components.scss
@@ -3,29 +3,29 @@
 
 .mdc-button {
   // @include mdc-button-shape-radius(50%);
-  @include mdc-button-outline-color($mdc-theme-primary);
-  @include mdc-button-horizontal-padding(1rem);
+  @include button.outline-color($mdc-theme-primary);
+  @include button.horizontal-padding(1rem);
 }
 
 // Checkbox and radio
 
 .mdc-checkbox {
   // Enabled container colors
-  @include mdc-checkbox-container-colors(
+  @include checkbox.container-colors(
     $unmarked-stroke-color: $mdc-theme-primary,
     $marked-fill-color: $mdc-theme-background,
     $marked-stroke-color: $mdc-theme-primary
   );
 
   // Disabled container colors
-  @include mdc-checkbox-disabled-container-colors(
+  @include checkbox.disabled-container-colors(
     $unmarked-stroke-color: rgba($mdc-theme-primary, 0.4),
     $marked-fill-color: rgba($mdc-theme-background, 0.4),
     $marked-stroke-color: rgba($mdc-theme-primary, 0.4)
   );
 
-  @include mdc-checkbox-ink-color($mdc-theme-primary);
-  @include mdc-checkbox-disabled-ink-color(rgba($mdc-theme-primary, 0.4));
+  @include checkbox.ink-color($mdc-theme-primary);
+  @include checkbox.disabled-ink-color(rgba($mdc-theme-primary, 0.4));
 }
 
 .mdc-radio {
@@ -276,7 +276,7 @@
   }
 }
 
-// Slider
+// ------------------ Slider ---------------------------------
 
 // Enabled
 .mdc-slider:not(.mdc-slider--disabled) {
@@ -289,6 +289,7 @@
   @include slider.value-indicator-text-color(#000);
 }
 
+// Disabled
 .mdc-slider.mdc-slider--disabled {
   @include slider.track-active-color($mdc-theme-primary);
   @include slider.track-inactive-color(var(--sliderTrackBackgroundColor), 1);
@@ -298,62 +299,6 @@
   @include slider.value-indicator-color($mdc-theme-primary, 0.7);
   @include slider.value-indicator-text-color(#000);
 }
-
-// .mdc-slider:not(.mdc-slider--disabled) {
-//   .mdc-slider__track {
-//     .mdc-slider__track--inactive {
-//       background-color: var(--secondaryText);
-//       opacity: 1;
-//     }
-//     .mdc-slider__tick-marks {
-//       .mdc-slider__tick-mark--active {
-//         background-color: white;
-//       }
-//       .mdc-slider__tick-mark--inactive {
-//         background-color: var(--surfaceElements);
-//       }
-//     }
-//   }
-//   .mdc-slider__thumb {
-//     .mdc-slider__thumb-knob {
-//       border: 1px solid var(--defaultText);
-//     }
-//     .mdc-slider__value-indicator-container {
-//       .mdc-slider__value-indicator {
-//         background-color: $mdc-theme-primary;
-//       }
-//     }
-//   }
-// }
-
-// // Disabled
-// .mdc-slider.mdc-slider--disabled {
-//   .mdc-slider__track {
-//     .mdc-slider__track--active {
-//       .mdc-slider__track--active_fill {
-//         background-color: $mdc-theme-primary;
-//         border-color: $mdc-theme-primary;
-//       }
-//     }
-//     .mdc-slider__track--inactive {
-//       background-color: var(--defaultText);
-//     }
-//     .mdc-slider__tick-marks {
-//       .mdc-slider__tick-mark--active {
-//         background-color: white;
-//       }
-//       .mdc-slider__tick-mark--inactive {
-//         background-color: var(--surfaceElements);
-//       }
-//     }
-//   }
-//   .mdc-slider__thumb {
-//     .mdc-slider__thumb-knob {
-//       border: 1px solid var(--defaultText);
-//       background-color: $mdc-theme-primary;
-//     }
-//   }
-// }
 
 // List
 
