refactored radio, switch, rtl mixin methods

--- a/dark/app.scss
+++ b/dark/app.scss
@@ -22,7 +22,7 @@
 @use "@material/menu";
 @use "@material/menu-surface";
 @use "@material/radio";
-// @use "@material/rtl";
+@use "@material/rtl";
 @use "@material/select";
 @use "@material/shape";
 @use "@material/snackbar";
