--- a/dark/my-components.scss
+++ b/dark/my-components.scss
@@ -32,27 +32,23 @@
   margin-right: 4px;
 
   // Enabled Colors
-  @include mdc-radio-unchecked-stroke-color($mdc-theme-primary);
-  @include mdc-radio-checked-stroke-color($mdc-theme-primary);
-  @include mdc-radio-ink-color($mdc-theme-primary);
+  @include radio.unchecked-stroke-color($mdc-theme-primary);
+  @include radio.checked-stroke-color($mdc-theme-primary);
+  @include radio.ink-color($mdc-theme-primary);
 
   // Disabled Colors
-  @include mdc-radio-disabled-unchecked-stroke-color(
-    rgba($mdc-theme-primary, 0.4)
-  );
-  @include mdc-radio-disabled-checked-stroke-color(
-    rgba($mdc-theme-primary, 0.4)
-  );
-  @include mdc-radio-disabled-ink-color(rgba($mdc-theme-primary, 0.4));
+  @include radio.disabled-unchecked-stroke-color(rgba($mdc-theme-primary, 0.4));
+  @include radio.disabled-checked-stroke-color(rgba($mdc-theme-primary, 0.4));
+  @include radio.disabled-ink-color(rgba($mdc-theme-primary, 0.4));
 }
 
 // Switch
 
 .mdc-switch {
-  @include mdc-rtl-reflexive-box(margin, right, 20px);
-  @include mdc-switch-toggled-on-thumb-color($mdc-theme-surface);
-  @include mdc-switch-toggled-on-track-color($mdc-theme-primary);
-  @include mdc-switch-toggled-off-track-color($mdc-theme-surface);
+  @include rtl.reflexive-box(margin, right, 20px);
+  @include switch.toggled-on-thumb-color($mdc-theme-surface);
+  @include switch.toggled-on-track-color($mdc-theme-primary);
+  @include switch.toggled-off-track-color($mdc-theme-surface);
 }
 
 // Top app bar
