changed the surface color

--- a/dark/my-colors.scss
+++ b/dark/my-colors.scss
@@ -10,8 +10,8 @@
   $background: #101923,
   $error: rgb(255, 56, 56),
   $on-error: #ffffff,
-  $surface: #ffffff,
-  $on-surface: #000000,
+  $surface: #1b2d3e,
+  $on-surface: #ffffff,
 );
 
 $headline-typography: (
