--- a/dark/my-components.scss
+++ b/dark/my-components.scss
@@ -1,10 +1,33 @@
 // Material Theming
 // After importing all MDC Web components, apply mixins to theme individual components
 
+//  Buttons
+
 .mdc-button {
   // @include mdc-button-shape-radius(50%);
   @include button.outline-color($mdc-theme-primary);
   @include button.horizontal-padding(1rem);
+}
+
+.mdc-button.mdc-button--raised {
+  @include button.container-fill-color(
+    (
+      hover: lighten($mdc-theme-primary, 10%),
+    )
+  );
+}
+
+button.mdc-icon-button {
+  color: $mdc-theme-primary;
+
+  &hover {
+    background-color: transparent;
+    color: lighten($mdc-theme-primary, 10%);
+  }
+}
+
+a.mdc-icon-button:hover {
+  color: lighten($mdc-theme-primary, 10%);
 }
 
 // Checkbox and radio
